# us-visa-bot

./: .env.ci  .env.example  GITHUB_WORKFLOW_README.md  README.md  captcha_solver.py  config.py  github_monitor.py  install.bat  install.sh  main.py  monitor.py  pyproject.toml  requirements.txt  script.py  script_1.py  script_10.py  script_11.py  script_12.py  script_13.py  script_14.py  script_15.py  script_16.py  script_17.py  script_2.py  script_3.py  script_4.py  script_5.py  script_6.py  script_7.py  script_8.py  script_9.py  security_questions.json  setup_github.sh  slot_checker.py  slot_monitor.py  test_automation.py  test_selenium.py  utils.py  visa_automation.py
.github/workflows/: slot-monitor.yml
